--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "chart.js": "^3.2.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
